fixed margins on mobile projects

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -107,11 +107,10 @@ footer {
 }
 
 .home-mobile {
-  height: 85vh;
+  //height: 85vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 1em;
   overflow-x: hidden;
 }
 
@@ -216,7 +215,7 @@ footer {
   transition: transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
 
   &-container {
-    min-height: 325px;
+    height: 325px;
     position: relative;
     min-width: 95vw;
   }
@@ -238,7 +237,7 @@ footer {
   }
 
   &-card {
-    margin: 0 auto;
+    margin: 0 auto 2em;
     width: 90%;
     padding: 1em;
     background: var(--clr-white);
@@ -267,7 +266,7 @@ footer {
       margin: 0 auto 1rem;
 
       &-heading {
-        margin: 0 auto;
+        text-align: left;
       }
     }
   }
